--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bitcore-node-snowgem",
+  "name": "bitcore-node-anon",
   "description": "Full node with extended capabilities using Bitcore and Zcash",
   "author": "BitPay <dev@bitpay.com>",
   "version": "3.1.2",
   "main": "./index.js",
-  "repository": "git://github.com/snowgem/bitcore-node-snowgem.git",
-  "homepage": "https://github.com/snowgem/bitcore-node-snowgem",
+  "repository": "git://github.com/anonymousbitcoin/bitcore-node-anon.git",
+  "homepage": "https://github.com/anonymousbitcoin/bitcore-node-anon",
   "bugs": {
     "url": "https://github.com/bitpay/bitcore-node/issues"
   },
@@ -42,12 +42,12 @@
   },
   "tags": [
     "snowgem",
-    "snowgemd"
+    "anond"
   ],
   "dependencies": {
     "async": "^1.3.0",
     "bitcoind-rpc": "^0.6.0",
-    "bitcore-lib-snowgem": "snowgem/bitcore-lib-snowgem",
+    "bitcore-lib-anon": "anonymousbitcoin/bitcore-lib-anon",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
